--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -14,6 +14,6 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\mbox{\hyperlink{class_order_detail}{Order\+Detail}} }{\pageref{class_order_detail}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_order_list_page}{Order\+List\+Page}} \\*Class representing the order list page widget }{\pageref{class_order_list_page}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_order_master}{Order\+Master}} }{\pageref{class_order_master}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_sql_condition}{Sql\+Condition}} }{\pageref{class_sql_condition}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_sql_condition}{Sql\+Condition}} \\*Class representing a condition in the WHERE clause of a SQL query }{\pageref{class_sql_condition}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classv_order_detail}{v\+Order\+Detail}} }{\pageref{classv_order_detail}}{}
 \end{DoxyCompactList}
